--- a/config/corne.conf
+++ b/config/corne.conf
@@ -17,3 +17,5 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+
+CONFIG_GPIO=y
