--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,6 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable deep sleep
 # CONFIG_ZMK_SLEEP=y
@@ -18,4 +18,4 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 
-CONFIG_GPIO=y
+# CONFIG_GPIO=y
