--- a/config/corne.conf
+++ b/config/corne.conf
@@ -3,7 +3,7 @@
 # CONFIG_WS2812_STRIP=y
 
 # Uncomment the following lines to enable the Corne RGB Backlight
-CONFIG_ZMK_BACKLIGHT=y
+#CONFIG_ZMK_BACKLIGHT=y
 
 # Uncomment the following line to enable deep sleep
 # CONFIG_ZMK_SLEEP=y
@@ -20,3 +20,4 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
