--- a/config/corne.conf
+++ b/config/corne.conf
@@ -20,5 +20,9 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_DISPLAY_INVERT=y
-# CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_SLEEP=n
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=600
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=n
